--- a/packages/react-pouchdb/package.json
+++ b/packages/react-pouchdb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-pouchdb",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "description": "React components for interacting with PouchDB.",
   "keywords": [
     "react",
@@ -33,7 +33,7 @@
     "example": "WEBDEV_ENTRY=./example/Example.tsx webpack serve"
   },
   "engines": {
-    "node": "^20.0.0"
+    "node": ">=20.0.0"
   },
   "peerDependencies": {
     "pouchdb": ">=9.0.0",
