Add additional eslint permutation

--- a/renovate.json5
+++ b/renovate.json5
@@ -74,6 +74,7 @@
         '/^eslint$/',
         '/^typescript-eslint$/',
         '/^eslint-*/',
+        '/^@eslint*/',
       ],
       automergeType: 'pr', // Create a PR
     },
