Adjust nodejs updates rule

--- a/renovate.json5
+++ b/renovate.json5
@@ -94,8 +94,9 @@
       matchPackageNames: [
         'node',
       ],
-      matchManagers: [
-        'dockerfile',
+      matchDatasources: [
+        'docker',
+        'node-version',
         'npm',
         'nvm',
       ],
