Make node rule only for major updates

--- a/renovate.json5
+++ b/renovate.json5
@@ -90,7 +90,10 @@
       ],
     },
     {
-      // Special handling for Node.js updates
+      // Special handling for Node.js major updates
+      matchUpdateTypes: [
+        'major',
+      ],
       matchPackageNames: [
         'node',
       ],
