Revert, rule not allowed with allowedVersions

--- a/renovate.json5
+++ b/renovate.json5
@@ -90,10 +90,7 @@
       ],
     },
     {
-      // Special handling for Node.js major updates
-      matchUpdateTypes: [
-        'major',
-      ],
+      // Special handling for Node.js updates
       matchPackageNames: [
         'node',
       ],
