--- a/renovate.json5
+++ b/renovate.json5
@@ -101,7 +101,7 @@
         'nvm',
       ],
       minimumReleaseAge: '30 days', // Two month waiting period
-      matchMajorReleases: ["/^[0-9]*[02468]$/"],  // Matches versions ending in even numbers
+      allowedVersions: '/^[1-9][0-9]*[02468]\\./', // LTS versions only
       separateMajorMinor: true,
       automerge: false, // Require manual review
       automergeType: 'pr', // Create a PR
