--- a/renovate.json5
+++ b/renovate.json5
@@ -90,7 +90,7 @@
       ],
     },
     {
-      // Special handling for major Node.js updates
+      // Special handling for major Node.js updates - this will include non-LTS, bleh
       matchPackageNames: [
         'node',
       ],
@@ -100,8 +100,10 @@
         'npm',
         'nvm',
       ],
+      matchUpdateTypes: [
+        'major',
+      ],
       minimumReleaseAge: '30 days', // Two month waiting period
-      allowedVersions: '/^[1-9][0-9]*[02468]\\./', // LTS versions only
       separateMajorMinor: true,
       automerge: false, // Require manual review
       automergeType: 'pr', // Create a PR
