--- a/renovate.json5
+++ b/renovate.json5
@@ -90,7 +90,7 @@
       ],
     },
     {
-      // Special handling for major Node.js updates - this will include non-LTS, bleh
+      // Special handling for major Node.js updates
       matchPackageNames: [
         'node',
       ],
@@ -100,29 +100,11 @@
         'npm',
         'nvm',
       ],
-      matchUpdateTypes: [
-        'major',
-      ],
       minimumReleaseAge: '30 days', // Two month waiting period
+      allowedVersions: '/^(?:[2468]\d*|8)\.(?:\d+)(?:\.(?:\d+))?$/', // LTS versions only
       separateMajorMinor: true,
       automerge: false, // Require manual review
       automergeType: 'pr', // Create a PR
-    },
-    {
-      // Special handling for non-major Node.js updates
-      matchPackageNames: [
-        'node',
-      ],
-      matchDatasources: [
-        'docker',
-        'node-version',
-        'npm',
-        'nvm',
-      ],
-      matchUpdateTypes: [
-        'minor',
-        'patch',
-      ],
     },
     {
       // Special handling for @stanlemon packages
