--- a/renovate.json5
+++ b/renovate.json5
@@ -123,7 +123,7 @@
     // Node.js updates
     {
       // Special handling for major Node.js updates
-      groupName: 'nodejs major updates',
+      groupName: 'nodejs updates',
       matchPackageNames: [
         'node',
       ],
