--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.2.16",
+  "version": "0.2.17",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
@@ -60,8 +60,6 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "@types/react": ">=18.0.0",
-    "@types/react-dom": ">=18.0.0"
+    "react-dom": ">=18.0.0"
   }
 }
