--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tsc": "npm run tsc --workspaces --if-present",
     "publish": "node publish.js",
     "workspaces:lint": "npm run lint --workspaces --if-present",
-    "workspaces:test": "npm run test --workspaces --if-present"
+    "workspaces:test": "npm run test --workspaces --if-present",
+    "renovate:validate": "npx --yes --package renovate -- renovate-config-validator"
   },
   "overrides": {
     "@types/pouchdb-core": "npm:@stanlemon/types-pouchdb-core@^0.0.1"
