--- a/renovate.json5
+++ b/renovate.json5
@@ -80,7 +80,7 @@
       matchPackageNames: [
         '!/^@stanlemon/',
       ],
-      minimumReleaseAge: '7 days',
+      //minimumReleaseAge: '7 days',
     },
     {
       // Handle major updates separately
@@ -102,7 +102,7 @@
       matchPackageNames: [
         '!/^@stanlemon/',
       ],
-      minimumReleaseAge: '14 days',
+      //minimumReleaseAge: '14 days',
     },
     {
       // Group all eslint related packages
