--- a/renovate.json5
+++ b/renovate.json5
@@ -8,7 +8,7 @@
     ':configMigration', // Migrate renovate configuration when necessary
     ':enablePreCommit', // Enable pre-commit hook updates
     ':combinePatchMinorReleases', // Combine patch and minor releases
-    ':separateMajorReleases', // Handle major updates separately
+    ':separateMultipleMajorReleases', // Handle major updates separately
     'docker:pinDigests', // Pin Docker digests,
     'group:monorepos', // Common monorepo groupings
     'group:allNonMajor', // Group all non-major updates
