Add node types back

--- a/renovate.json5
+++ b/renovate.json5
@@ -126,6 +126,7 @@
       groupName: 'nodejs updates',
       matchPackageNames: [
         'node',
+        '@types/node',
       ],
       'matchUpdateTypes': [
         'major',
